[gd_scene load_steps=5 format=3 uid="uid://hyvlt13flbqe"]

[ext_resource type="Script" uid="uid://cck6oqq4s0y3p" path="res://scenes/preview_container.gd" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://cwo44bl0aa3iv" path="res://scenes/game_folder_chooser.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://brqljdaat63df" path="res://scenes/gamer_version_chooser.gd" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://efk1ohv3xy23" path="res://scenes/graphic_info_previewer.gd" id="3_sugp2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LeftVBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_jyhfs")

[node name="PaletteMenu" type="MenuButton" parent="MarginContainer/HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
text = "請選擇調色板"

[node name="GraphicPreview" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="MarginContainer/HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
text = "另存圖片"

[node name="RightVBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="GameFolderChooser" type="GridContainer" parent="MarginContainer/HBoxContainer/RightVBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GameFolderChooser"]
layout_mode = 2
text = "選擇遊戲資料夾"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GameFolderChooser"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
context_menu_enabled = false
emoji_menu_enabled = false
clear_button_enabled = true
script = ExtResource("1_o5qli")

[node name="FileDialog" type="FileDialog" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GameFolderChooser/LineEdit"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="GamerVersionChooser" type="GridContainer" parent="MarginContainer/HBoxContainer/RightVBoxContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_0wfyh")

[node name="MenuButton" type="MenuButton" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GamerVersionChooser"]
layout_mode = 2
size_flags_horizontal = 3
text = "請選擇遊戲版本"

[node name="GraphicInfoPreviewer" type="GridContainer" parent="MarginContainer/HBoxContainer/RightVBoxContainer"]
visible = false
layout_mode = 2
columns = 2
script = ExtResource("3_sugp2")

[node name="PopupPanel" type="PopupPanel" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
size = Vector2i(1152, 648)

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer/PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 1148.0
offset_bottom = 644.0

[node name="ID" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "編號"

[node name="IDInput" type="SpinBox" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
size_flags_horizontal = 3
rounded = true
allow_greater = true

[node name="Address" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "資料位址"

[node name="AddressInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="Length" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "資料長度"

[node name="LengthInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="XOffset" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "X 偏移量"

[node name="XOffsetInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="YOffset" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "Y 偏移量"

[node name="YOffsetInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="Width" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "圖片寬度"

[node name="WidthInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="Height" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "圖片高度"

[node name="HeightInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="EastGrid" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "佔地格數（東）"

[node name="EastGridInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="SouthGrid" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "佔地格數（南）"

[node name="SouthGridInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="Access" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "是否可穿越"

[node name="AccessInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[node name="MapID" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
text = "地圖編號"

[node name="MapIDInput" type="LineEdit" parent="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer"]
layout_mode = 2
editable = false

[connection signal="validated_game_paths" from="MarginContainer/HBoxContainer/RightVBoxContainer/GameFolderChooser/LineEdit" to="MarginContainer/HBoxContainer/LeftVBoxContainer" method="_on_line_edit_validated_game_paths"]
[connection signal="validated_game_paths" from="MarginContainer/HBoxContainer/RightVBoxContainer/GameFolderChooser/LineEdit" to="MarginContainer/HBoxContainer/RightVBoxContainer/GamerVersionChooser" method="_on_line_edit_validated_game_paths"]
[connection signal="game_file_opened" from="MarginContainer/HBoxContainer/RightVBoxContainer/GamerVersionChooser" to="MarginContainer/HBoxContainer/RightVBoxContainer/GraphicInfoPreviewer" method="_on_gamer_version_chooser_game_file_opened"]
